fixing copyright and hiding alice quote on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,12 @@ footer p {
     width: 100%;
   } */
 
- .desktop-only {
+  aside {
+    position: static;
+    width: 50%;
+  }
+
+  .desktop-only {
     display: none;
   }
 
